2011-03-30  Seiko Epson Corporation <linux-epson-inkjet@avasys.jp>
	* db/source/printer/Epson-Stylus_NX215.xml,
         db/source/printer/Epson-Stylus_NX415.xml,
         db/source/printer/Epson-Stylus_SX205.xml,
         db/source/printer/Epson-Stylus_SX215.xml,
         db/source/printer/Epson-Stylus_SX405.xml,
         db/source/printer/Epson-Stylus_SX415.xml,
         db/source/printer/Epson-Stylus_TX203.xml,
         db/source/printer/Epson-Stylus_TX209.xml,
         db/source/printer/Epson-Stylus_TX213.xml,
         db/source/printer/Epson-Stylus_TX219.xml,
         db/source/printer/Epson-Stylus_TX409.xml,
         db/source/printer/Epson-Stylus_TX419.xml:
         Entries were restored to the MySQL database.

2011-03-25  George Liu <gliu@ricohsv.com>

	* Added 88 new Postscript and 76 new PCL-XL PPD files for Ricoh Family Group.
	* Updated 629 existing PCL-XL PPD files to add new paper size support.

2011-03-24  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/c2esp.xml, printer/Kodak-ESP_3.xml,
	printer/Kodak-ESP_7.xml, printer/Kodak-ESP_9.xml,
	printer/Kodak-ESP_3250.xml, printer/Kodak-ESP_5250.xml,
	printer/Kodak-ESP_5500.xml, printer/Kodak-ESP_6150.xml,
	printer/Kodak-ESP_7250.xml, printer/Kodak-EasyShare_5100.xml,
	printer/Kodak-EasyShare_5300.xml,
	printer/Kodak-EasyShare_5500.xml: Added new "c2esp" driver entry
	for Kodak inkjet printers and some Kodak inkjets which possibly
	work with this driver.

2011-03-23  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Ricoh-Aficio_SP_1000S.xml, printer/Ricoh-Aficio_SP_1100S.xml,
	driver/rastertosag-gdi.xml: Added the new "rastertosag-gdi" driver
	and the printers which use it: Ricoh Aficio SP 1000S and SP 1100S
	(Ubuntu bug #700141,
	http://forums.linux-foundation.org/read.php?30,13489,13581).

2011-03-02  Till Kamppeter <till.kamppeter@gmail.com>

	* opt/2.xml, opt/Postscript-PageSize.xml: Added custom page size
	to the PageSize option of many drivers. Most printers are capable