@@ -14,8 +14,8 @@
   <url>http://www.epson.com/</url>
   <autodetect>
     <general>
-      <ieee1284>MFG:EPSON;CMD:ESCPL2,BDC,D4,D4PX,ESCPR2;MDL:Epson ME OFFICE 85ND;CLS:PRINTER;DES:EPSON Epson ME OFFICE 85ND</ieee1284>
-      <commandset>ESCPL2,BDC,D4,D4PX,ESCPR2</commandset>
+      <ieee1284>MFG:EPSON;CMD:ESCPL2,BDC,D4,D4PX;MDL:Epson ME OFFICE 85ND;CLS:PRINTER;DES:EPSON Epson ME OFFICE 85ND</ieee1284>
+      <commandset>ESCPL2,BDC,D4,D4PX</commandset>
       <description>EPSON Epson ME OFFICE 85ND</description>
       <manufacturer>EPSON</manufacturer>
       <model>Epson ME OFFICE 85ND</model>
@@ -26,9 +26,6 @@
   <drivers>
     <driver>
       <id>epson-workforce-635-60-nx625-series</id>
-    </driver>
-    <driver>
-      <id>epson-escpr</id>
     </driver>
  </drivers>
   <comments>
