@@ -1,6 +1,6 @@
-<printer id="printer/Epson-ME_900FWD_Series">
+<printer id="printer/Epson-ME_900WD_Series">
   <make>Epson</make>
-  <model>ME 900FWD Series</model>
+  <model>ME 900WD Series</model>
   <mechanism>
     <inkjet />
     <color />
