@@ -14,15 +14,19 @@
   <url>http://www.epson.com/</url>
   <autodetect>
     <general>
-      <ieee1284>MFG:EPSON;CMD:ESCPL2,BDC,D4,D4PX,ESCPR2;MDL:PX-673F;CLS:PRINTER;DES:Epson PX-673F</ieee1284>
+      <ieee1284>MFG:EPSON;CMD:ESCPL2,BDC,D4,D4PX,ESCPR2;MDL:PX-673F;CLS:PRINTER;DES:EPSON PX-673F</ieee1284>
       <commandset>ESCPL2,BDC,D4,D4PX,ESCPR2</commandset>
+      <description>EPSON PX-673F</description>
       <manufacturer>EPSON</manufacturer>
       <model>PX-673F</model>
     </general>
   </autodetect>
   <functionality>A</functionality>
-  <driver>epson-escpr</driver>
+  <driver>epson-px-673f</driver>
   <drivers>
+    <driver>
+      <id>epson-px-673f</id>
+    </driver>
     <driver>
       <id>epson-escpr</id>
     </driver>
