@@ -1,4 +1,4 @@
-<printer id="printer/Epson-Stylus_Office_BX925">
+<printer id="printer/Epson-Stylus_Office_BX925FW">
   <make>Epson</make>
   <model>Stylus Office BX925</model>
   <mechanism>
@@ -21,8 +21,11 @@
     </general>
   </autodetect>
   <functionality>A</functionality>
-  <driver>epson-escpr</driver>
+  <driver>epson-workforce-840</driver>
   <drivers>
+    <driver>
+      <id>epson-workforce-840</id>
+    </driver>
     <driver>
       <id>epson-escpr</id>
     </driver>
