@@ -21,8 +21,11 @@
     </general>
   </autodetect>
   <functionality>A</functionality>
-  <driver>epson-escpr</driver>
+  <driver>epson-workforce-840</driver>
   <drivers>
+    <driver>
+      <id>epson-workforce-840</id>
+    </driver>
     <driver>
       <id>epson-escpr</id>
     </driver>
