@@ -1,4 +1,12 @@
 2011-03-30  Seiko Epson Corporation <linux-epson-inkjet@avasys.jp>
+	* db/source/printer/Epson-WorkForce_840.xml,
+         db/source/printer/Epson-Stylus_Office_BX925FW.xml,
+         db/source/printer/Epson-ME_900WD_Series.xml,
+         db/source/printer/Epson-PX-673F.xml,
+         db/source/printer/Epson-ME_85ND_Series.xml:
+         Modified printer XML files.
+
+2011-03-30  Seiko Epson Corporation <linux-epson-inkjet@avasys.jp>
 	* db/source/printer/Epson-Stylus_NX215.xml,
          db/source/printer/Epson-Stylus_NX415.xml,
          db/source/printer/Epson-Stylus_SX205.xml,
